--- a/public/manifest.json
+++ b/public/manifest.json
@@ -8,12 +8,12 @@
   "theme_color": "#3498db",
   "icons": [
     {
-      "src": "/avatar.svg",
+      "src": "/icon.svg",
       "sizes": "192x192",
       "type": "image/svg"
     },
     {
-      "src": "/avatar.svg",
+      "src": "/icon.svg",
       "sizes": "512x512",
       "type": "image/svg"
     }
