--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
     "react-helmet": "^6.1.0",
+    "react-helmet-async": "^1.3.0",
     "tailwind-merge": "^3.3.1",
     "tailwindcss": "^4.1.11"
   },
